--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
     <meta name="keywords" content="Monster Survivors, survival game, roguelike game, online game, action game">
     <link rel="canonical" href="https://monstersurvivors.space">
     <script src="https://cdn.tailwindcss.com"></script>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-84Z40CV02Y"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-84Z40CV02Y');
+    </script>
 </head>
 <body class="min-h-screen bg-gradient-to-br from-gray-50 to-gray-100 text-gray-900 flex flex-col">
     <!-- Header -->
